[project]
name = "chat-with-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docarray>=0.41.0",
    "faiss-cpu>=1.12.0",
    "gradio>=5.46.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-ollama>=0.3.8",
    "pypdf>=6.0.0",
]
